--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -4,25 +4,25 @@
   background-color: #eee;
 }
 .login .top {
-  padding-top: 40px;
+  padding-top: 1rem;
 }
 .login .top .icon {
-  width: 50px;
-  height: 50px;
+  width: 1rem;
+  height: 1rem;
 }
 .login .top .title {
-  font-size: 20px;
-  margin-top: 10px;
+  font-size: 0.4rem;
+  margin-top: 0.1rem;
 }
 .login .inputs {
-  margin-top: 20px;
-  padding: 10px;
+  margin-top: 0.2rem;
+  padding: 0.1rem;
 }
 .login .buttons {
-  padding: 10px;
+  padding: 0.1rem;
 }
 .login .buttons a {
-  margin-top: 10px;
+  margin-top: 0.1rem;
 }
 .login .buttons .registerBtn {
   background-color: #32db64;
@@ -32,9 +32,52 @@
   display: flex;
   width: 100%;
   justify-content: space-evenly;
+  margin-top: 0.3rem;
 }
 .login .otherWay .line {
   width: 30%;
   border-bottom: 1px dashed gray;
-  height: 8px;
+  height: 0.12rem;
+}
+.login .loginType {
+  margin-top: 0.5rem;
+}
+.login .loginType i {
+  font-size: 0.9rem;
+}
+.login .loginType .icon-QQ {
+  color: #0288d1;
+  margin-right: 0.4rem;
+}
+.login .loginType .icon-weixin {
+  color: #d32f2f;
+}
+.login .loginType .icon-zhifubao {
+  color: #0ae;
+  margin-left: 0.4rem;
+}
+.login .links {
+  text-align: center;
+  margin-top: 1rem;
+}
+.login .links span {
+  display: inline-block;
+}
+.login .links .registerBtn {
+  padding-right: 0.2rem;
+  border-right: 1px solid gray;
+}
+.login .links .forgetPasswordBtn {
+  padding-left: 0.2rem;
+}
+.login .bottom {
+  margin-top: 1rem;
+}
+.login .bottom span {
+  display: inline-block;
+  padding: 0 0.2rem;
+  border-right: 1px solid gray;
+}
+.login .bottom span:last-child {
+  border-right: none;
 }
