--- a/src/pages/Bottom/bottom.css
+++ b/src/pages/Bottom/bottom.css
@@ -8,6 +8,7 @@
   width: 100%;
   justify-content: space-between;
   box-sizing: border-box;
+  background-color: white;
 }
 .bottom .item {
   cursor: pointer;
